💄 fixed banner layout on mobile

--- a/public/css/core.css
+++ b/public/css/core.css
@@ -484,6 +484,18 @@ table {
         }
     }
 
+    .banner.full-width {
+        height: auto;
+
+        & img {
+            width: 100%;
+        }
+    }
+
+    search {
+        width: 100%;
+    }
+
     .side-content-container {
         grid-template-columns: auto;
 
@@ -491,9 +503,5 @@ table {
             border-left: none;
             border-top: var(--xxs) solid var(--bg-light);
         }
-    }
-
-    search {
-        width: 100%;
     }
 }
